[project]
name = "viz-matplotlib-journey-yanholtz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.1",
    "drawarrow>=0.1.0",
    "geopandas>=1.1.0",
    "highlight-text>=0.2",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pyfonts>=1.0.0",
    "pypalettes>=0.1.5",
    "seaborn>=0.13.2",
]
